<resources>
    <string name="app_name">Dialog</string>
    <string name="btnAlert">Alert</string>
    <string name="btnDate">Date Picker</string>
    <string name="btnTime">Time Picker</string>
    <string name="Progress" />
    <string name="btnProgress">Progress</string>
    <string name="btnCustom">Custom</string>
    <string name="txtDef">This is codekul, Regarding the duplicate back stack entries, your conditional statement that replaces the fragment if it hasnt been popped is clearly different than what my original code snippets. What you are doing is adding to the back stack regardless of whether or not the back stack was popped</string>
</resources>
